--- a/resources/assets/scss/components/_footer.scss
+++ b/resources/assets/scss/components/_footer.scss
@@ -1,29 +1,155 @@
-.footer-main {
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
+$site-red: #ab1a2d;
+$site-dred: #841523;
 
-        li {
-            a {
-                text-decoration: none;
+.footer {
+    &__wrapper {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+        //min-height: 765px;
+        margin: 0 ;
+        padding: 108px 0 0;
+        background-position: top center !important;
+    }
+    &__menus {}
+
+    &__item {
+        .row {
+            margin-bottom: 30px;
+        }
+        .footer-logo {
+            img {
+                width: 100%;
+                max-width: 258px;
+            }
+        }
+        .footer-contacts {
+            display: block;
+            margin-top: 130px;
+            .item {
+                position: relative;
+                display: block;
+                color: $color-black;
+                font: 300 18px $font-primary;
+                margin-bottom: 6px;
+                a {
+                    color: $color-black;
+                }
+                a, span {
+                    display: inline-block;
+                    vertical-align: middle;
+                    max-width: 250px;
+                }
+                i {
+                    &.loc {
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 25px;
+                        height: 37px;
+                        background: url("../images/sprite.png") no-repeat;
+                        background-position: -97px -8px;
+                    }
+                    &.tel {
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 25px;
+                        height: 21px;
+                        background: url("../images/sprite.png") no-repeat;
+                        background-position: -240px -8px;
+                    }
+                    &.mail {
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 25px;
+                        height: 19px;
+                        background: url("../images/sprite.png") no-repeat;
+                        background-position: -119px -51px;
+                    }
+                }
+            }
+        }
+        h4 {
+            color: $color-black;
+            text-transform: uppercase;
+            font: 900 21px $font-primary;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+
+            li {
+                display: block;
+                margin-bottom: 7px;
+                a {
+                    outline: none;
+                    text-decoration: none;
+                    color: $color-black;
+                    font: 300 19px $font-primary;
+                }
+            }
+        }
+        .join-content {
+            .title {
+                position: relative;
+                background: $color-black;
+                padding: 12px 0 12px 100px;
+                border-bottom-left-radius: 100px;
+                margin-bottom: 30px;
+                &::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    right: -95%;
+                    width: 100%;
+                    height: 60px;
+                    z-index: 0;
+                    background: $color-black;
+                }
+                h4 {
+                    color: $color-white;
+                }
+            }
+            .btn-wrap {
+                margin-top: 15px;
             }
         }
     }
-
-    &__wrapper {
-        max-width: 1400px;
-    }
-
-    &__menus {}
-
-    &__item {}
 
     &__middle {}
 
     &__right {}
 
-    &__copyright {}
+    &__copyright {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 30px 0;
+        margin-top: 30px;
+        background: $site-red;
+        .copyright-txt {
+            position: relative;
+            color: #b9b1b2;
+            font: 400 16px $font-primary;
+            a {
+                color: #b9b1b2;
+            }
+        }
+    }
+}
+
+.smi-wrap {
+    text-align: right;
+    a {
+        outline: none;
+        text-decoration: none;
+        color: $color-white;
+        margin: 0 8px;
+        font-size: 18px;
+    }
 }
 
 /* Scroll to top link */
