--- a/resources/assets/scss/components/_headings.scss
+++ b/resources/assets/scss/components/_headings.scss
@@ -1,17 +1,10 @@
 .primary-heading {
-    margin-bottom: 45px;
+    // margin-bottom: 45px;
+    // h2 {
+    //     font-size: 3.6em;
+    //     span {}
+    // }
     h2 {
-         font-size: 3.6em;
-         span {
-         }
-    }
-}
-
-.secondary-heading {
-    h2 {
-        font-weight: 900;
-        font-size: 3.6em;
-        color: $color-secondary;
-        margin-bottom: 35px;
+        font-size: 4em;
     }
 }
